@@ -4148,7 +4148,6 @@ IDL_BINDINGS_GDOM += \
 	WebCore/page/Console.idl \
 	WebCore/page/DOMWindow.idl \
 	WebCore/page/DOMSelection.idl \
-	WebCore/page/Geolocation.idl \
 	WebCore/page/History.idl \
 	WebCore/page/Location.idl \
 	WebCore/page/MemoryInfo.idl \
@@ -4164,6 +4163,12 @@ IDL_BINDINGS_GDOM += \
 	WebCore/xml/XPathExpression.idl \
 	WebCore/xml/XPathNSResolver.idl \
 	WebCore/xml/XPathResult.idl
+
+if ENABLE_GEOLOCATION
+IDL_BINDINGS_GDOM += \
+	WebCore/page/Geolocation.idl
+endif # END ENABLE_GEOLOCATION
+
 
 # All classes autogenerated in the GObject DOM bindings
 GDOM_AUTO_CLASSES += $(basename $(notdir $(IDL_BINDINGS_GDOM)))
